--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,3 +46,5 @@ jobs:
         uses: actions/deploy-pages@v4
         with:
           publish_dir: ./public_html
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          
