--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./public_html
           github_token: ${{ secrets.GITHUB_TOKEN }}
